[tool.poetry]
name = "test-auth"
version = "0.1.0"
description = ""
authors = ["assyadyu <assya.dyu@gmail.com>"]
readme = "README.md"
packages = [{include = "test_auth"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
